# Course_work_4

./: main.py  pyproject.toml  readme.md
data/: main.db
src/: api.py  vacancies.py
